# AegisNode

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  go.mod
.github/workflow/: ci.yml
.github/workflows/: ci.yml
cmd/operator/: gogog.go  main.go
deployments/: crd.yaml  operator.yaml
internal/controller/: aiprivacypolicy_controller.go
proxy/: Cargo.toml  Dockerfile  config.example.yaml
proxy/src/: main.rs
proxy/src/core/: config.rs  engine.rs  error.rs  mod.rs  scanner.rs  upstream.rs
proxy/src/modules/: openai.rs
